--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -12,9 +12,62 @@
 
     <center><img src="pesto-pizza_600.jpg" alt="Pesto pizza photo"></center>
 
-    <center><h2>Description</h2></center>
+    <h3>Description</h3>
+    <p>A mouthwatering favourite! This irresistable entree will delight any hungry child or the most discerning ahult.</p>
 
-    <p></p>
-    
+    <p>The bold flavour of pesto coupled with hint of garlic, basil and parmesan cheese create the perfect blend to indugle the senses. The crispy, thin crust provides the ideal platform to present the ingredients. </p>
+
+  <h3>Ingredients</h3>  
+
+  <p>For the dough:</p>
+
+  <ul>
+      <li>3 cups all purpose flour</li>
+      <li>2 tablespoons extra virgin olive oil</li>
+      <li>2-1/4 teaspoons instant/rapid rise yeast</li>
+      <li>1-3/4 teaspoons salt</li>
+      <li>1 cup warm water</li>
+      <li>2 teaspoons cornmeal, for dusting the pan</li>
+  </ul>
+
+  <p>For the toppings:</p>
+
+  <ul>
+      <li>1/2 cup good quality homemade pesto</li>
+      <li>8 ounces whole milk mozzarella cheese, thinly sliced or grated</li>
+      <li>2 vine ripened tomatoes</li>
+      <li>1/4 cup grated Parmigiano-Reggiano</li>
+      <li>1/4 teaspoon salt</li>
+      <li>Freshy ground black pepper</li>
+      <li>1/4 cup gently packed fresh basil leaves, torn</li>
+  </ul>
+
+    <h3>Steps</h3>
+
+    <p>For the dough:</p>
+
+    <ol>
+        <li>Combine flour, water, olive oil, yeast and salt in a large bowl.(use a mixer with dough hook if you like)</li>
+        <li>Mix until the dough comes together.</li>
+        <li>Knead until the dough is smooth and elastic.
+        <li>Cover with plastic wrap and let rise in a warm place.(roughly 1 to 1-1/2 hours until the dough has doubled in size.</li>
+        <li>Punch dough down and cut into two equal sizes</li>
+        <li>Let dough rest under a damp cloth for about 15 to 20 min.</li>
+        <li>On a lightly dusted surface, pat dough out into 8 by 12 inch rectangles. Place on a prepared cooking pan.</li>
+    </ol>
+
+    <ol>
+        
+        <p>For the toppings:</p>
+
+        <li>Cut tomatoes crosswise into 1/8 inch slices and place on a paper towel to drain.</li>
+        <li>Spread 1/3 cup of the pesto evenly over the pizzas, leaving a 1 inch border.</li>
+        <li>Bake the pizzas on the bottom rack of the oven for about 4 min.(to allow the crust to crisp up)</li>
+        <li>Remove from the oven and top the pizzas with mozzarella first, followed by tomato slices, Parmigiano-Reggiano, salt and pepper.</li>
+        <li>Place back in oven and bake until crust is crisp and brown.(about 6 to 8 minutes)</li>
+        <li>Transfer the pizzas to a cutting board and top with remaining pesto.</li>
+        <li>Sprinkle with fresh basil, cut into slices and serve. Enjoy!</li>
+
+    </ol>
 </body>
 </html>
